--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>My Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="/assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="~/assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="~/assets/css/style.css">
 </head>
 <body>
 
